--- a/.github/workflows/upgrade-agglayer-e2e.yml
+++ b/.github/workflows/upgrade-agglayer-e2e.yml
@@ -41,14 +41,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # If we pull private GHCR images, need this login; else no need
-      - name: Login to GHCR
+      - name: Login to Docker Hub
         if: ${{ env.DOCKER_USERNAME != '' && env.DOCKER_TOKEN != '' }}
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
           username: ${{ env.DOCKER_USERNAME }}
           password: ${{ env.DOCKER_TOKEN }}
+
+      # GHCR login
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
        # Install kurtosis
       - name: Install Kurtosis (via apt.fury.io)
