--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -48,15 +48,21 @@ on:
         type: string
 
       aggsender-find-imported-bridge-artifact:
-        description: "Path for aggsender to find the imported bridge"
+        description: "Path for aggsender helper tool to find the imported bridge"
         required: true
         type: string
 
-      event-name:
-        description: "Event name to be used for the test"
+      execute-all-tests:
+        description: "If true, run all tests and report failures at the end (no fail-fast)."
         required: false
-        type: string
-        default: ""
+        type: boolean
+        default: false
+      
+      fail-fast:
+        description: "Stop test execution on first failure"
+        required: false
+        type: boolean
+        default: true
 
 permissions:
   contents: read
@@ -144,13 +150,12 @@ jobs:
           chmod +x "/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
           export AGGSENDER_IMPORTED_BRIDGE_PATH="/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
 
-          # ------------------------------
-          # Decide fail-fast vs run-all mode
-          # ------------------------------
-          if [[ "${{ inputs.event-name }}" == "schedule" ]]; then
-            FAIL_FAST=false
-          else
+          if [[ "${{ inputs.fail-fast }}" == "true" ]]; then
             FAIL_FAST=true
+            echo "Running in FAIL-FAST mode"
+          else
+            FAIL_FAST=false
+            echo "Running in RUN-ALL mode"
           fi
 
           # ------------------------------
@@ -182,8 +187,8 @@ jobs:
             run_test ./tests/aggkit/e2e-pp.bats
             run_test ./tests/aggkit/bridge-sovereign-chain-e2e.bats
 
-            # Extra scheduled tests
-            if [[ "$FAIL_FAST" == false ]]; then
+            # Extra tests, whose execution is time consuming
+            if [[ "${{ inputs.execute-all-tests }}" == "true" ]]; then
               run_test ./tests/op/optimistic-mode.bats
               run_test ./tests/aggkit/bridge-e2e-nightly.bats
               run_test ./tests/aggkit/internal-claims.bats
