--- a/tests/lxly/networks/bali-networks.env
+++ b/tests/lxly/networks/bali-networks.env
@@ -44,3 +44,9 @@ BALI_NETWORK_57_RPC_URL="<REDACTED>"
 BALI_NETWORK_57_PRIVATE_KEY="<REDACTED>"
 BALI_NETWORK_57_BRIDGE_ADDR="0x1348947e282138d8f377b467F7D9c2EB0F335d1f"
 BALI_NETWORK_57_BRIDGE_SERVICE_URL="https://bridge.bali-57-op.dev.polygon"
+
+# BALI-68
+BALI_NETWORK_68_RPC_URL="<REDACTED>"
+BALI_NETWORK_68_PRIVATE_KEY="<REDACTED>"
+BALI_NETWORK_68_BRIDGE_ADDR="0xA06c0f3EE3D7f78358e24A5120bB4d6e93780Cea"
+BALI_NETWORK_68_BRIDGE_SERVICE_URL="https://bridge.bali-68-outpost.dev.polygon"
