--- a/tests/lxly/networks/bali-networks.env
+++ b/tests/lxly/networks/bali-networks.env
@@ -45,6 +45,12 @@ BALI_NETWORK_57_PRIVATE_KEY="<REDACTED>"
 BALI_NETWORK_57_BRIDGE_ADDR="0x1348947e282138d8f377b467F7D9c2EB0F335d1f"
 BALI_NETWORK_57_BRIDGE_SERVICE_URL="https://bridge.bali-57-op.dev.polygon"
 
+# BALI-66
+BALI_NETWORK_66_RPC_URL="<REDACTED>"
+BALI_NETWORK_66_PRIVATE_KEY="<REDACTED>"
+BALI_NETWORK_66_BRIDGE_ADDR="0x1348947e282138d8f377b467F7D9c2EB0F335d1f"
+BALI_NETWORK_66_BRIDGE_SERVICE_URL="https://skien-bridge-api.eu-north-2.gateway.fm"
+
 # BALI-68
 BALI_NETWORK_68_RPC_URL="<REDACTED>"
 BALI_NETWORK_68_PRIVATE_KEY="<REDACTED>"
