feat: bali 66 ci setup
Signed-off-by: Ji Hwan <jkim@polygon.technology>

--- a/.github/workflows/standard-bridge-tests-rpc-dispatch.yml
+++ b/.github/workflows/standard-bridge-tests-rpc-dispatch.yml
@@ -89,6 +89,7 @@ jobs:
       BALI_49_RPC_ENDPOINT: ${{ secrets.L2_BALI_49_RPC_ENDPOINT }}
       BALI_52_RPC_ENDPOINT: ${{ secrets.L2_BALI_52_RPC_ENDPOINT }}
       BALI_57_RPC_ENDPOINT: ${{ secrets.L2_BALI_57_RPC_ENDPOINT }}
+      BALI_66_RPC_ENDPOINT: ${{ secrets.L2_BALI_66_RPC_ENDPOINT }}
       BALI_68_RPC_ENDPOINT: ${{ secrets.L2_BALI_68_RPC_ENDPOINT }}
       # Cardona-specific RPC endpoints from secrets
       # CARDONA_01_RPC_ENDPOINT: ${{ secrets.L2_CARDONA_01_RPC_ENDPOINT }}
@@ -188,6 +189,10 @@ jobs:
             echo "Validating Bali-57 endpoint..."
             cast chain-id --rpc-url ${{ secrets.L2_BALI_57_RPC_ENDPOINT }}
             echo "Bali-57 chain ID validation passed"
+
+            echo "Validating Bali-66 endpoint..."
+            cast chain-id --rpc-url ${{ secrets.L2_BALI_66_RPC_ENDPOINT }}
+            echo "Bali-66 chain ID validation passed"
 
             echo "Validating Bali-68 endpoint..."
             cast chain-id --rpc-url ${{ secrets.L2_BALI_68_RPC_ENDPOINT }}
@@ -292,6 +297,9 @@ jobs:
             export BALI_NETWORK_57_RPC_URL="${{ env.BALI_57_RPC_ENDPOINT }}"
             export BALI_NETWORK_57_PRIVATE_KEY="${{ env.L2_FUNDED_PRIVATE_KEY }}"
 
+            export BALI_NETWORK_66_RPC_URL="${{ env.BALI_66_RPC_ENDPOINT }}"
+            export BALI_NETWORK_66_PRIVATE_KEY="${{ env.L2_FUNDED_PRIVATE_KEY }}"
+
             export BALI_NETWORK_68_RPC_URL="${{ env.BALI_68_RPC_ENDPOINT }}"
             export BALI_NETWORK_68_PRIVATE_KEY="${{ env.L2_FUNDED_PRIVATE_KEY }}"
 
@@ -320,6 +328,10 @@ jobs:
             echo "Bali-57 RPC URL: ${BALI_NETWORK_57_RPC_URL:0:20}..."
             echo "Bali-57 Bridge Address: $BALI_NETWORK_57_BRIDGE_ADDR"
             echo "Bali-57 Bridge Service: $BALI_NETWORK_57_BRIDGE_SERVICE_URL"
+
+            echo "Bali-66 RPC URL: ${BALI_NETWORK_66_RPC_URL:0:20}..."
+            echo "Bali-66 Bridge Address: $BALI_NETWORK_66_BRIDGE_ADDR"
+            echo "Bali-66 Bridge Service: $BALI_NETWORK_66_BRIDGE_SERVICE_URL"
 
             echo "Bali-68 RPC URL: ${BALI_NETWORK_68_RPC_URL:0:20}..."
             echo "Bali-68 Bridge Address: $BALI_NETWORK_68_BRIDGE_ADDR"
