chore: bump to kurtosis-pos v1.2.11

--- a/scenarios/pos/upgrade/.env.example
+++ b/scenarios/pos/upgrade/.env.example
@@ -1,5 +1,5 @@
 ENCLAVE_NAME=pos
-KURTOSIS_POS_VERSION=55b4bd7
+KURTOSIS_POS_VERSION=v1.2.11
 
 NEW_BOR_IMAGE=0xpolygon/bor:2.6.0-beta
 NEW_ERIGON_IMAGE=0xpolygon/erigon:v3.4.0-beta
