--- a/scenarios/pos/upgrade/.env.example
+++ b/scenarios/pos/upgrade/.env.example
@@ -1,8 +1,8 @@
 ENCLAVE_NAME=pos
 KURTOSIS_POS_VERSION=v1.2.12
-RIO_HF=128
+RIO_HF=256
 RIO_HF_TIMEOUT=300
 
-NEW_BOR_IMAGE=0xpolygon/bor:2.6.0-beta
-NEW_ERIGON_IMAGE=0xpolygon/erigon:v3.4.0-beta
+NEW_BOR_IMAGE=0xpolygon/bor:2.6.0-arm64
+NEW_ERIGON_IMAGE=0xpolygon/erigon:v3.4.0
 NEW_HEIMDALL_V2_IMAGE=0xpolygon/heimdall-v2:0.6.0
