--- a/scenarios/pos/upgrade/.env.example
+++ b/scenarios/pos/upgrade/.env.example
@@ -1,6 +1,7 @@
 ENCLAVE_NAME=pos
-KURTOSIS_POS_VERSION=v1.2.11
+KURTOSIS_POS_VERSION=v1.2.12
+RIO_FORK_BLOCK=256
 
-NEW_BOR_IMAGE=0xpolygon/bor:2.6.0-beta
-NEW_ERIGON_IMAGE=0xpolygon/erigon:v3.4.0-beta
+NEW_BOR_IMAGE=0xpolygon/bor:2.6.0-amd64
+NEW_ERIGON_IMAGE=0xpolygon/erigon:v3.4.0
 NEW_HEIMDALL_V2_IMAGE=0xpolygon/heimdall-v2:0.6.0
